# restaraunts

./: .$resto-rany.drawio.bkp  .gitignore  Item_cls.py  OrderStatus_cls.py  Order_cls.py  Restaraunt_cls.py  Visitor_cls.py  main.py  resto-rany.drawio
restaraunts/: pyproject.toml
restaraunts/src/restaraunts/: main.py
